manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-82256992
spec:
  ports:
    - port: 8080
  selector:
    app: "82256992"
